apps/hello-barsa-test-to-delete/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-barsa-test-to-delete
  namespace: default
  labels:
    app: hello-barsa-test-to-delete
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-barsa-test-to-delete
  template:
    metadata:
      labels:
        app: hello-barsa-test-to-delete
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: hello-barsa-test-to-delete
        image: ghcr.io//hello-barsa-test-to-delete:main
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
