apps/hello-barsa-test-to-delete/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-barsa-test-to-delete
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: hello-barsa-test-to-delete.johannmoreno.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-barsa-test-to-delete
            port:
              number: 80
  tls:
  - hosts:
    - hello-barsa-test-to-delete.johannmoreno.dev
    secretName: hello-barsa-test-to-delete-tls
